Fixed Aside z-index ¬¬

--- a/src/components/Aside/Aside.scss
+++ b/src/components/Aside/Aside.scss
@@ -8,7 +8,7 @@
   width: $nav-width;
   height: 100%;
   margin: auto;
-  z-index: 20;
+  z-index: 80;
   background: white;
   color: #333;
   will-change: transform;
